--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h3>Pages</h3>
+  <h3>{{ user.name }}'s Pages</h3>
   <hr>
   <ul class="list-unstyled">
   {% for page in pages %}
