--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h3>{{title}} <small> (<a href="PLACEHOLDER_URL_TITLE/similar">Similar</a>)</small></h3>
-  <h4>by <a href="PLACEHOLDER-AUTHOR-URL">{{author_name}}</a></h4>
+  <h3>{{page.title}} <small> (<a href="PLACEHOLDER_URL_TITLE/similar">Similar</a>)</small></h3>
+  <h4>by <a href="/users/{{ page.authorId }}">{{user.name}}</a></h4>
   <div>PLACEHOLDER TAG LIST</div>
   <hr/>
   <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
-  <div class="page-body">{{content}}</div>
+  <div class="page-body">{{page.content}}</div>
   <hr/>
   <a href="PLACEHOLDER_URL_TITLE/edit" class="btn btn-primary">Edit This!</a>
   <a href="PLACEHOLDER_URL_TITLE/delete" class="btn btn-danger">Delete This!</a>
