--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 
 {% block content %}
+	{% if user.name %}
   <h3>{{ user.name }}'s Pages</h3>
+  	{% else %}
+  <h3>Home Page</h3>
+  	{% endif %}
   <hr>
   <ul class="list-unstyled">
   {% for page in pages %}
