--- a/views/users.html
+++ b/views/users.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
+	<h3>Top Users</h3>
+	<hr>
 	<ul class='list-unstyled'>
 	  {% for user in users %}
 	    <li><a href="/users/{{ user.id }}">{{ user.name }}</a></li>
