--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -2,8 +2,8 @@
 
 {% block content %}
   <h3>{{page.title}} <small> (<a href="PLACEHOLDER_URL_TITLE/similar">Similar</a>)</small></h3>
-  <h4>by <a href="/users/{{ page.authorId }}">{{user.name}}</a></h4>
-  <div>PLACEHOLDER TAG LIST</div>
+  <h4>by <a href="/users/{{ page.authorId }}">{{page.author.name}}</a></h4>
+  <div>{% for tag in page.tags %} <a href='#'>#{{tag}}  </a> {% endfor %}</div>
   <hr/>
   <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
   <div class="page-body">{{page.content}}</div>
